--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "barryvdh/laravel-dompdf": "^3.1",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
-        "maatwebsite/excel": "^1.1"
+        "phpoffice/phpspreadsheet": "^4.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
